--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,9 @@
 
 # Test binary, built with `go test -c`
 *.test
-
+.env
+cloudinary/.env
+cloudinary/.idea
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
