--- a/pkg/other/cloudinary/docker-compose.yaml
+++ b/pkg/other/cloudinary/docker-compose.yaml
@@ -1,4 +1,4 @@
-version: "3.8"
+
 
 services:
   web:
@@ -9,10 +9,10 @@ services:
     restart: always
     tty: true
     environment:
-      - CLOUDINARY_ID= ${CLOUDINARY_ID}
-      - CLOUDINARY_URL= ${CLOUDINARY_URL}
-      - PORT=8097
+      - CLOUDINARY_ID=${CLOUDINARY_ID}
+      - CLOUDINARY_URL=${CLOUDINARY_URL}
+      - PORT=${PORT}
     ports:
-      - "8097:8097"
+      - ${PORT}:${PORT}
     volumes:
       - ./:/app
