--- a/pkg/other/cloudinary/.env.example
+++ b/pkg/other/cloudinary/.env.example
@@ -1,4 +1,4 @@
-CLOUDINARY_ID=xxx
+CLOUDINARY_ID=<cloud-id>
 CLOUDINARY_URL=cloudinary://<api-key>:<api-secret>@<cloud-id>
 GOOS=linux
 GOARCH=amd64
