--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,8 @@
 *.dll
 *.so
 *.dylib
-
+.env
+/pkg/other/python-video/venv
 # Test binary, built with `go test -c`
 *.test
 pkg/other/cloudinary/.env
