stream relay is working

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
-PORT_VIDEO=7000
-; IP=127.0.0.1
-; BOUNDARY=--123456789000000000000987654321
+PortVideo=7000
+ESP32_ADDRESS=192.168.16.10
+ESP32_PORT=7000
+RELAY_ADDRESS=:8080
+STREAM_BOUNDARY=123456789000000000000987654321
