--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@
 pkg/other/cloudinary/.env
 cloudinary/.env
 cloudinary/.idea
+node_modules
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
