feat(template): add tailwind style

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 IP=127.0.0.1
 BOUNDARY=--123456789000000000000987654321
-UPLOAD_VIDEO_URL=http://localhost:8045/upload-video
+UPLOAD_VIDEO_URL=http://localhost:8083/upload-video
 CLOUDINARY_URL=cloudinary://731224174341573:A-JiJDrwaIpfMflMZ39esoHDLUA@dtgt8j8u8
 CLOUDINARY_ID=dtgt8j8u8
 PortVideo=7000
@@ -8,3 +8,4 @@ ESP32_ADDRESS=192.168.16.10
 ESP32_PORT=7000
 RELAY_ADDRESS=:8080
 STREAM_BOUNDARY=123456789000000000000987654321
+DATABASE_URL=postgres://root:password@localhost:5432/tech_race?sslmode=disable
