--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -41,3 +41,7 @@ services:
         PGADMIN_DEFAULT_PASSWORD: password
     volumes:
       - pgadmin-data:/var/lib/pgadmin
+
+volumes:
+  db-data:
+  pgadmin-data:
