feat(template): add tailwind style

--- a/.env
+++ b/.env
@@ -8,4 +8,4 @@ ESP32_ADDRESS=192.168.16.10
 ESP32_PORT=7000
 RELAY_ADDRESS=:8080
 STREAM_BOUNDARY=123456789000000000000987654321
-DATABASE_URL=postgres://root:password@localhost:5432/tech_race?sslmode=disable
+DATABASE_URL=postgresql://root:jznNxAtbmaJJSjjggJ4MkPLKMeL4awe7@dpg-crflg8jv2p9s73csdm20-a.frankfurt-postgres.render.com/tech_race
